<resources>
    <string name="app_name">Group Expenses</string>
    <string name="btn_add_data">Add</string>
    <string name="total_expenses">Total Expenses: </string>
    <string name="tot_exp_amount">0.00</string>
    <string name="average_expenses">Average Expense: </string>
    <string name="person">Person</string>
    <string name="amount">Amount</string>
    <string name="info">Description</string>
    <string name="back_btn">Back</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_add_expense">Add</string>
    <string name="btn_settlement">Settlement</string>
    <string name="payer">Payer</string>
    <string name="payee">Payee</string>
    <string name="errorName">Person must contains just letters(hyphens also)</string>
    <string name="errorAmount">Wrong input for amount</string>
</resources>
