<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettlementFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0, 1, 2">
        <TableRow android:padding="10dp">
            <TextView
                android:text="@string/payer"
                android:textStyle="bold"/>
            <TextView
                android:text="@string/payee"
                android:textStyle="bold"/>
            <TextView
                android:text="@string/amount"
                android:textStyle="bold"/>
        </TableRow>
    </TableLayout>


</LinearLayout>